[Arch] Backport uncommited changes Besi made ahead of (the old and deprectated) svn branch on SF ; part2 : update source tree + migrate project properties for use with netbeans 7.2